# 2026-01-16_policy-catalogue-automation

./: README.md  docker-compose.local.yml  main.py  pyproject.toml
backend/: main.py
scripts/: clean.sh  setup.sh
table_handler/: main.py
testing/: .gitignore  README.md  pyproject.toml  some_random_script.py
testing/approved/: README.md
testing/approved/acts/: README.md  laws.db  main.py  test_acts.py
testing/approved/acts/law_library/: __init__.py  api.py  indexer.py  repo_manager.py
testing/approved/bills/: README.md  main.py  test_bills.py
testing/approved/legislative/: BILL_TYPES.md  HISTORICAL_TRACKING.md  STAGE_MACHINE.md  bill_analytics.py  bill_lookup.py  bill_type_stats.py  main.py
testing/approved/regulation/: main.py
testing/approved/regulations/: README.md  gazette_data.json  main.py  main_backup.py  part1.py  part1_data.json  part2.py  part2_data.json  part3.py  part3_data.json  test_regulations.py
testing/approved/regulations/output/: 2026-01-17_part-1_volume-160_number-3.json  2026-01-24_part-1_volume-160_number-4.json
testing/legislative/: ENHANCED_TRACKING.md  README.md  bill_analytics.py  bill_lookup.py  main.py  test_bill_types.py  utils.py
testing/regulation/: README.md
